--- a/resources/screen-full.less
+++ b/resources/screen-full.less
@@ -1,5 +1,16 @@
 @import "variables.less";
 
+// Override from mobile collapsing
+#p-personal,
+#footer-navigation .mw-portlet-body {
+	display: block !important;
+}
+
+#header-navigation .navigation,
+#header-navigation .navigation-tools {
+	display: inline-block !important;
+}
+
 /*
 * Navigation menus
 */
@@ -24,13 +35,13 @@
 	position: relative;
 
 	#p-personal-label {
-		margin: 0.25em 0;
+		margin: 0 0 0 1em;
 		font-size: 1em;
 		line-height: 1.3;
 		background-repeat: no-repeat;
-		background-position: 100% 30%;
+		background-position: 100% 40%;
 		background-image: url( images/arrow-down.svg );
-		padding: 0 1.75em 0.3em 0;
+		padding: 0.25em 1.75em 0.3em 0;
 
 		/* Dropdown stuff */
 		&:hover {
@@ -72,18 +83,18 @@
 		float: right;
 
 		h3 {
-			margin: 0.6em 0 0.45em 1.5em;
+			margin: 0 0 0 1.5em;
 		}
 	}
 
 	h3 {
 		display: inline-block;
-		padding: 0 1.75em 0 0;
-		margin: 0.6em 1.5em 0.45em 0;
+		padding: 0.6em 1.75em 0.45em 0;
+		margin: 0 1.5em 0 0;
 		font-weight: normal;
 		font-size: 90%;
 		background-repeat: no-repeat;
-		background-position: 100% 90%;
+		background-position: 100% 50%;
 		background-image: url( images/arrow-down.svg );
 		text-shadow: none;
 
