--- a/resources/screen-mobile.less
+++ b/resources/screen-mobile.less
@@ -1,5 +1,12 @@
 @import "variables.less";
 
+// Override from desktop collapsing
+#header-container .dropdown,
+#header-navigation-container .dropdown,
+#content-header .dropdown {
+	display: block !important;
+}
+
 /* Extra stuff mobile doesn't need */
 .sitesubtitle,
 .p-logo,
@@ -122,7 +129,7 @@ div.thumb {
 	display: inline;
 }
 
-#f-list {
+#footer-list {
 	font-size: 100%;
 }
 
