--- a/resources/variables.less
+++ b/resources/variables.less
@@ -30,6 +30,7 @@
 	text-align: left;
 	z-index: 5;
 	line-height: 1.1em;
+	z-index: 10;
 
 	ul {
 		margin: 0;
